[gd_scene load_steps=10 format=3]

[ext_resource type="Texture2D" uid="uid://cg5a5o4iewhii" path="res://assets/sidescroller/parallax_bg/parallax-mountain-bg-1280.png" id="1_4ci4g"]
[ext_resource type="Texture2D" uid="uid://opinqxrvd1yg" path="res://assets/sidescroller/parallax_bg/parallax-mountain-montain-far-1280.png" id="2_mwshx"]
[ext_resource type="Texture2D" uid="uid://b4mnoeqpf7p8k" path="res://assets/sidescroller/parallax_bg/parallax-mountain-mountains-1280.png" id="3_gtkcm"]
[ext_resource type="Texture2D" uid="uid://ba402kqyim604" path="res://assets/sidescroller/parallax_bg/parallax-mountain-trees-1280.png" id="4_7ocfn"]
[ext_resource type="Texture2D" uid="uid://bu7blssngx43k" path="res://assets/sidescroller/parallax_bg/parallax-mountain-foreground-trees-1280.png" id="5_702xi"]
[ext_resource type="Script" path="res://scripts/PlayerPhysics.gd" id="6_el7sq"]
[ext_resource type="Texture2D" uid="uid://biw0lmf7oxf1x" path="res://assets/sidescroller/fighter_lr.png" id="7_ygphb"]
[ext_resource type="Script" path="res://scripts/PlayerCamera.gd" id="8_rjv5a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5f4aw"]
size = Vector2(5120, 720)

[node name="sidescroller_proto" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_limit_end = Vector2(5120, 720)
scroll_ignore_camera_zoom = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground"]
texture = ExtResource("1_4ci4g")
centered = false

[node name="mountain-far" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(0, -1)
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(1280, 0)

[node name="mountain-far-sprite" type="Sprite2D" parent="ParallaxBackground/mountain-far"]
texture = ExtResource("2_mwshx")
centered = false

[node name="mountains" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.4, 0.4)
motion_mirroring = Vector2(1280, 0)

[node name="mountain-sprite" type="Sprite2D" parent="ParallaxBackground/mountains"]
position = Vector2(4, 339)
texture = ExtResource("3_gtkcm")
centered = false

[node name="trees" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.6, 0.6)
motion_mirroring = Vector2(1280, 0)

[node name="trees-sprite" type="Sprite2D" parent="ParallaxBackground/trees"]
visible = false
position = Vector2(4, 339)
texture = ExtResource("4_7ocfn")
centered = false

[node name="foreground-trees" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2(0.8, 0.8)
motion_mirroring = Vector2(1280, 0)

[node name="foreground-trees-sprite" type="Sprite2D" parent="ParallaxBackground/foreground-trees"]
visible = false
position = Vector2(4, 339)
texture = ExtResource("5_702xi")
centered = false

[node name="World" type="Area2D" parent="."]

[node name="WorldBounds" type="CollisionShape2D" parent="World"]
position = Vector2(1000, 400)
shape = SubResource("RectangleShape2D_5f4aw")

[node name="PlayerShip" type="RigidBody2D" parent="." node_paths=PackedStringArray("world_bounds")]
position = Vector2(457, 165)
gravity_scale = 0.0
linear_damp = 0.99
script = ExtResource("6_el7sq")
input_type = 1
world_bounds = NodePath("../World/WorldBounds")
metadata/_edit_group_ = true

[node name="PlayerSprite2D" type="Sprite2D" parent="PlayerShip"]
texture = ExtResource("7_ygphb")

[node name="PlayerCollision" type="CollisionPolygon2D" parent="PlayerShip"]
polygon = PackedVector2Array(-2, -25, 28, -14, 29, -12, 50, -3, 55, 9, 54, 12, 60, 13, 61, 20, 59, 23, 41, 21, 38, 23, 17, 22, 11, 20, -6, 28, -44, 27, -49, 6, -44, 4, -60, -12, -39, -10, -31, -3, -21, -10, -21, -16, -10, -27)

[node name="PlayerCamera" type="Camera2D" parent="." node_paths=PackedStringArray("target")]
position = Vector2(565, 7)
limit_left = 0
limit_top = 0
script = ExtResource("8_rjv5a")
target = NodePath("../PlayerShip")
