[gd_scene load_steps=3 format=3 uid="uid://dm1h2mdxt7dqy"]

[ext_resource type="Script" path="res://scripts/PlayerPhysics.gd" id="1_p2nr5"]
[ext_resource type="Texture2D" uid="uid://cea3c5hpxnnop" path="res://assets/sidescroller/mech/mech_flymode_lr.png" id="2_h6c7m"]

[node name="PlayerShip" type="RigidBody2D" node_paths=PackedStringArray("world_bounds")]
position = Vector2(453, 176)
gravity_scale = 0.0
linear_damp = 0.99
script = ExtResource("1_p2nr5")
input_type = 1
world_bounds = NodePath("../../World/WorldBounds")
metadata/_edit_group_ = true

[node name="ShipCollision" type="CollisionPolygon2D" parent="."]
position = Vector2(6, -30)
polygon = PackedVector2Array(2, -28, 17, -25, 29, -14, 50, -3, 55, 9, 54, 12, 64, 14, 64, 24, 51, 24, 50, 33, -8, 31, -13, 26, -9, 14, -30, 17, -31, 7, -54, 7, -52, 2, -60, -12, -54, -26, -29, -26, -17, -22, -1, -20)

[node name="PlayerSprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_h6c7m")
