[gd_scene load_steps=11 format=3 uid="uid://c3l5naye38yps"]

[ext_resource type="Texture2D" uid="uid://cgrr26kfqa65a" path="res://assets/topdown/parallax_bg/BackdropBlackLittleSparkBlack.png" id="1_68uxn"]
[ext_resource type="Texture2D" uid="uid://qm6d87pa4e8m" path="res://assets/topdown/parallax_bg/Parallax100.png" id="2_4hx0p"]
[ext_resource type="Texture2D" uid="uid://3pvfvk44r0pj" path="res://assets/topdown/parallax_bg/Parallax80.png" id="3_l55fp"]
[ext_resource type="Texture2D" uid="uid://cg5hor68ty4iw" path="res://assets/topdown/parallax_bg/Parallax60.png" id="4_rth6c"]
[ext_resource type="Script" path="res://scripts/PlayerCamera.gd" id="9_0plvu"]
[ext_resource type="Script" path="res://scripts/PlayerPhysics.gd" id="10_dsny1"]
[ext_resource type="PackedScene" uid="uid://ccqcds4nkn5cm" path="res://scenes/warp_point.tscn" id="10_ybva3"]
[ext_resource type="Texture2D" uid="uid://bk0bpb2ltdg8y" path="res://assets/topdown/fighter_td.png" id="11_on3nb"]
[ext_resource type="Script" path="res://scripts/DronePhysics.gd" id="12_ylqpf"]
[ext_resource type="Texture2D" uid="uid://wsxgt288odn8" path="res://assets/topdown/Bomber2B.png" id="13_fw7ut"]

[node name="topdown_proto" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
follow_viewport_scale = 2.0
scroll_ignore_camera_zoom = true

[node name="Background" type="Sprite2D" parent="ParallaxBackground"]
texture = ExtResource("1_68uxn")
centered = false

[node name="far" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2(0.05, 0.05)
motion_mirroring = Vector2(2048, 2048)

[node name="SpaceFar" type="Sprite2D" parent="ParallaxBackground/far"]
visible = false
texture = ExtResource("2_4hx0p")
centered = false

[node name="mid" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(2048, 2048)

[node name="SpaceMid" type="Sprite2D" parent="ParallaxBackground/mid"]
texture = ExtResource("3_l55fp")
centered = false

[node name="close" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(2048, 2048)

[node name="SpaceClose" type="Sprite2D" parent="ParallaxBackground/close"]
visible = false
texture = ExtResource("4_rth6c")
centered = false

[node name="ParallaxForeground" type="ParallaxBackground" parent="."]
follow_viewport_scale = 2.0
scroll_ignore_camera_zoom = true

[node name="close" type="ParallaxLayer" parent="ParallaxForeground"]
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(2048, 2048)

[node name="SpaceClose" type="Sprite2D" parent="ParallaxForeground/close"]
texture = ExtResource("4_rth6c")
centered = false

[node name="PlayerCamera" type="Camera2D" parent="." node_paths=PackedStringArray("target")]
position = Vector2(565, 7)
limit_smoothed = true
script = ExtResource("9_0plvu")
target = NodePath("../WorldObjects/PlayerShip")

[node name="WorldObjects" type="Node" parent="."]

[node name="PlayerShip" type="RigidBody2D" parent="WorldObjects" groups=["PlayerShip"]]
position = Vector2(457, 165)
gravity_scale = 0.0
angular_damp = 5.0
script = ExtResource("10_dsny1")
input_type = 3
max_speed = 100
max_torque = 4000
metadata/_edit_group_ = true

[node name="PlayerCollision" type="CollisionPolygon2D" parent="WorldObjects/PlayerShip"]
rotation = 1.5708
scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(-32, -25, -40, -56, -50, -25, -51, 15, -60, 50, -48, 56, -38, 41, -25, 46, 25, 46, 39, 42, 48, 56, 60, 50, 51, 15, 50, -25, 40, -56, 32, -25, 0, -38)

[node name="PlayerSprite2D" type="Sprite2D" parent="WorldObjects/PlayerShip"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("11_on3nb")

[node name="EnemyTest" type="RigidBody2D" parent="WorldObjects"]
position = Vector2(774, 259)
gravity_scale = 0.0
angular_damp = 5.0
script = ExtResource("12_ylqpf")
metadata/_edit_group_ = true

[node name="VesselCollision" type="CollisionPolygon2D" parent="WorldObjects/EnemyTest"]
rotation = 1.5708
scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(-2.00006, -12, -10, -4, -13.9999, 10, 14.0001, 9.99988, 10, -4.00012)

[node name="VesselSprite2D" type="Sprite2D" parent="WorldObjects/EnemyTest"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("13_fw7ut")

[node name="WarpPoint" parent="." instance=ExtResource("10_ybva3")]
position = Vector2(171, 134)
